Fix dark mode

--- a/app/assets/stylesheets/dark_theme.scss
+++ b/app/assets/stylesheets/dark_theme.scss
@@ -45,6 +45,13 @@ body.dark-theme {
   --backgroundFooter-color: #27293d;
   --codemirror-color: #9b9b9f;
   --thumbnail-color: #fff;
+  --shadowAreaControl-color: #171717;
+  --bgAreaControl-color: #27293d;
+  --artist-color: #828282;
+  --timer-color: rgb(219, 219, 219);
+  --shadowImg-color: #181717;
+  --playBtnFilter-color: #1e1e2f;
+  --nextPrev-color: #1e1e2f;
 
   background-color: var(--background-color);
   color: var(--white2-color);
@@ -754,6 +761,67 @@ body.dark-theme {
 
     input {
       border: 1px solid var(--white2-color);
+    }
+  }
+
+
+  .playlist-frame {
+    .area-header {
+      .cover {
+        .shadow {
+          background-color: var(--shadowImg-color);
+        }
+      }
+    }
+
+    .area-control {
+      background-color: var(--bgAreaControl-color);
+
+      .control-name-artist {
+        .artist {
+          color: var(--artist-color);
+        }
+      }
+
+      .control-progress {
+        .progress__bar {
+          background-color: #d0d8e6;
+        }
+
+        .progress__current {
+          background-color: #4db6ac;
+        }
+
+        .timer {
+          .text {
+            color: var(--timer-color);
+          }
+        }
+      }
+
+      .player-controls {
+        .player-controls__item {
+          color: #4db6ac;
+
+          &.playBtn {
+            filter: drop-shadow(0 11px 6px var(--playBtnFilter-color));
+            color: #4db6ac;
+          }
+
+          &.prevNext:hover {
+            background: var(--nextPrev-color);
+            box-shadow: 0px 5px 10px 0px rgba(76, 70, 124, 0.2);
+          }
+        }
+      }
+    }
+  }
+
+  @media screen and (min-width: 769px) {
+    .playlist-frame {
+      .area-control {
+        box-shadow: 4px 24px 22px 1px var(--shadowAreaControl-color);
+      }
     }
   }
 
